@@ -1,3 +1,10 @@
+2004-06-19  Dafydd Harries  <daf@muse.19inch.net>
+
+	* lib/alexandria/book.rb:
+
+	Rewrote the ISBN code to be more Rubyish and made it allow 13-digit
+	EAN numbers.
+
 2004-06-18  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/ui/new_book_dialog.rb:
